--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
-    <script type="text/javascript" src="./model.js"></script>
-    <script type="text/javascript" src="./modelService.js"></script>
-    <script type="text/javascript" src="./view.js"></script>
-    <script type="text/javascript" src="./controller.js"></script>
-    <script type="text/javascript" src="./bind.js"></script>
+    <script type="text/javascript" src="./js/model.js"></script>
+    <script type="text/javascript" src="./js/modelService.js"></script>
+    <script type="text/javascript" src="./js/view.js"></script>
+    <script type="text/javascript" src="./js/controller.js"></script>
+    <script type="text/javascript" src="./js/bind.js"></script>
   </head>
   <body>
     <div style="width: auto; float: left; margin-left: 20px;">
